--- a/power.html
+++ b/power.html
@@ -24,6 +24,9 @@
                         <a class="nav-link" href="security.html">Security</a>
                       </li>
                       <li class="nav-item">
+                          <a class="nav-link" href="ai.html">AI & Quantum</a>
+                      </li>
+                      <li class="nav-item">
                         <a class="nav-link" href="models.html">Models</a>
                       </li>
                       <li class="nav-item">
