--- a/security.html
+++ b/security.html
@@ -25,6 +25,9 @@
                         <a class="nav-link active" href="security.html">Security</a>
                       </li>
                       <li class="nav-item">
+                          <a class="nav-link" href="ai.html">AI & Quantum</a>
+                      </li>
+                      <li class="nav-item">
                         <a class="nav-link" href="models.html">Models</a>
                       </li>
                       <li class="nav-item">
