--- a/ai.html
+++ b/ai.html
@@ -116,7 +116,7 @@
             <li><strong>Governments:</strong> National initiatives in USA, China, EU, and others with multi-billion dollar investments</li>
         </ul>
 
-        <div class="alert alert-info mt-4">
+        <div class="mt-4">
             <h4>The Future Convergence</h4>
             <p>
                 Experts predict that quantum computing will not replace classical computing for AI, 
